--- a/src/assets/scss/ui/ui-control-ingred.scss
+++ b/src/assets/scss/ui/ui-control-ingred.scss
@@ -60,28 +60,28 @@
 }
 
 
-.include-mods ul,.exclude-mods ul {
-  li {
-    padding:10px 0;
-    border-bottom:1px solid #4e555b;
-  }
-  display: block;
-  position: absolute;
-  left:0;
-  width:100%;
-  top:0;
-  border:1px solid #4e555b;
-  border-radius:6px;
-  padding:1.5em;
-  z-index: 20;
-  background: #fff;
-  text-align: left;
-  list-style:none;
-  display:none;
-}
-.include-mods ul.active,.exclude-mods ul.active {
-  display: block;
-}
+// .include-mods ul,.exclude-mods ul {
+//   li {
+//     padding:10px 0;
+//     border-bottom:1px solid #4e555b;
+//   }
+//   display: block;
+//   position: absolute;
+//   left:0;
+//   width:100%;
+//   top:0;
+//   border:1px solid #4e555b;
+//   border-radius:6px;
+//   padding:1.5em;
+//   z-index: 20;
+//   background: #fff;
+//   text-align: left;
+//   list-style:none;
+//   display:none;
+// }
+// .include-mods ul.active,.exclude-mods ul.active {
+//   display: block;
+// }
 
 
 
