--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -299,8 +299,8 @@
     position: absolute;
     width: 300px;
     z-index: 1;
-    left: 90%;
-    top: 275px;
+    left: 45vw;
+    top: 308px;
   }
 }
 
