--- a/src/components/newFilter/style.scss
+++ b/src/components/newFilter/style.scss
@@ -37,6 +37,7 @@
   padding-left: 0;
   list-style: none;
   top: -2px !important;
+  transform: translate3d(15px, 41px, 0px) !important;
 
   &.show {
     display: block;
