--- a/src/components/newDishmod/style.scss
+++ b/src/components/newDishmod/style.scss
@@ -128,6 +128,7 @@
       .counter {
         width: 20px;
         height: 20px;
+        line-height: 20px;
         align-content: center;
         padding: 0;
         background: transparent;
