modals without Tabs switcher

--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -34,7 +34,7 @@
   background: url("img/pizza_mashr.png") center left no-repeat;
   background-size: contain;
   width: 47vw;
-  height: 450px;
+  height: 570px;
 
   .add-mo-to-cart {
     left: 57%;
@@ -52,7 +52,7 @@
   position: absolute;
   right: 36%;
   top: 22%;
-  background: url("img/burger_classic_maxi.png") center right no-repeat;
+  background: url("img/burger.png") center right no-repeat;
   background-size: contain;
   width: 20vw;
   height: 300px;
