--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,35 +1,47 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url('assets/fonts/subset-Gilroy-Medium.woff2') format('woff2'),
-  url('assets/fonts/subset-Gilroy-Medium.woff') format('woff'),
-  url('assets/fonts/subset-Gilroy-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Gilroy';
-  src: url('assets/fonts/subset-Gilroy-Bold.woff2') format('woff2'),
-  url('assets/fonts/subset-Gilroy-Bold.woff') format('woff'),
-  url('assets/fonts/subset-Gilroy-Bold.ttf') format('truetype');
+  src: url('assets/fonts/Gilroy-Bold.eot');
+  src: url('assets/fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
+      url('assets/fonts/Gilroy-Bold.woff2') format('woff2'),
+      url('assets/fonts/Gilroy-Bold.woff') format('woff'),
+      url('assets/fonts/Gilroy-Bold.ttf') format('truetype'),
+      url('assets/fonts/Gilroy-Bold.svg#Gilroy-Bold') format('svg');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('assets/fonts/subset-Gilroy-Regular.woff2') format('woff2'),
-  url('assets/fonts/subset-Gilroy-Regular.woff') format('woff'),
-  url('assets/fonts/subset-Gilroy-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  src: url('assets/fonts/Gilroy-BoldItalic.eot');
+  src: url('assets/fonts/Gilroy-BoldItalic.eot?#iefix') format('embedded-opentype'),
+      url('assets/fonts/Gilroy-BoldItalic.woff2') format('woff2'),
+      url('assets/fonts/Gilroy-BoldItalic.woff') format('woff'),
+      url('assets/fonts/Gilroy-BoldItalic.ttf') format('truetype'),
+      url('assets/fonts/Gilroy-BoldItalic.svg#Gilroy-BoldItalic') format('svg');
+  font-weight: bold;
+  font-style: italic;
 }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('assets/fonts/subset-Gilroy-Extrabold.woff2') format('woff2'),
-  url('assets/fonts/subset-Gilroy-Extrabold.woff') format('woff'),
-  url('assets/fonts/subset-Gilroy-Extrabold.ttf') format('truetype');
-  font-weight: 800;
+  src: url('assets/fonts/Gilroy-RegularItalic.eot');
+  src: url('assets/fonts/Gilroy-RegularItalic.eot?#iefix') format('embedded-opentype'),
+      url('assets/fonts/Gilroy-RegularItalic.woff2') format('woff2'),
+      url('assets/fonts/Gilroy-RegularItalic.woff') format('woff'),
+      url('assets/fonts/Gilroy-RegularItalic.ttf') format('truetype'),
+      url('assets/fonts/Gilroy-RegularItalic.svg#Gilroy-RegularItalic') format('svg');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('assets/fonts/Gilroy-Regular.eot');
+  src: url('assets/fonts/Gilroy-Regular.eot?#iefix') format('embedded-opentype'),
+      url('assets/fonts/Gilroy-Regular.woff2') format('woff2'),
+      url('assets/fonts/Gilroy-Regular.woff') format('woff'),
+      url('assets/fonts/Gilroy-Regular.ttf') format('truetype'),
+      url('assets/fonts/Gilroy-Regular.svg#Gilroy-Regular') format('svg');
+  font-weight: normal;
   font-style: normal;
 }
