--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -157,7 +157,7 @@
   flex-direction: column;
   border: 1px solid #CFCFCF;
   border-radius: 5px;
-  right: 80px;
+  right: 5vw;
   min-width: 600px;
   top: 70px;
   background: white;
@@ -209,31 +209,27 @@
 .amount-food-block{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  width: 80px;
 }
 .plus-minus-block{
   border: 1px solid black;
   border-radius: 100%;
   margin-top: 30px;
-  padding: 0px 5px 0px 5px;
-  width: 23px;
-  height: 23px;
+  padding: 0px 18px 0px 5px;
+  width: 25px;
+  height: 25px;
   cursor: pointer;
   font-size: 25px;
+  line-height: 22px;
 }
-.minus{
-  position: relative;
-  top: -8px;
-  left: -1px;
-}
-.plus{
-  position: relative;
-  top: -8px;
-  left: -1px;
+.plus-minus-block:hover{
+  background-color: #ffd60f;
+  border: 1px solid #ffd60f;
 }
 .amount-food-num{
   font-size: 23px;
   margin-top: 24px;
-  padding: 0px 10px 0px 10px;
 }
 .delete-button{
   font-size: 20px;
@@ -244,6 +240,10 @@
   height: 45px;
   margin: 17px 20px 0px 20px;
   cursor: pointer;
+}
+.delete-button:hover{
+  background-color: #ffd60f;
+  border: 1px solid #ffd60f;
 }
 .basket-block-food-block-left{
   display: flex;
@@ -288,8 +288,11 @@
   width: 20px;
   height: 20px;
   background-color: white;
-  left: 445px;
+  right: 140px;
   top: -11px;
+}
+.basket-wrapper{
+  margin-top: 18px;
 }
 
 @media screen and (max-width:1100px){
@@ -303,6 +306,6 @@
     justify-content: start;
   }
   .triangle{
-    left: 570px;
+    right: 65px;
   }
 }
