--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -157,9 +157,9 @@
   flex-direction: column;
   border: 1px solid #CFCFCF;
   border-radius: 5px;
-  right: 5vw;
+  right: -100px;
   min-width: 600px;
-  top: 70px;
+  top: 50px;
   background: white;
   padding: 0px 20px 15px 20px;
 }
@@ -293,6 +293,7 @@
 }
 .basket-wrapper{
   margin-top: 18px;
+  position: relative;
 }
 
 @media screen and (max-width:1100px){
@@ -306,6 +307,6 @@
     justify-content: start;
   }
   .triangle{
-    right: 65px;
+    right: 140px;
   }
 }
