add Tabs and merge two separated modal windows

--- a/src/components/newDelivery/style.scss
+++ b/src/components/newDelivery/style.scss
@@ -9,6 +9,8 @@
 
   // Шапка модального окна
   .modal-header {
+    display: flex;
+    justify-content: flex-start;
     position: relative;
     background: black;
     padding: 0;
@@ -20,21 +22,26 @@
       padding: 10px;
       display: block;
       height: 100%;
-      width: 50%;
+      width: 35%;
       color: black;
       font-size: 21px;
       text-align: center;
       text-transform: uppercase;
     }
   
-    .info-title {
+    .tab-name {
+      cursor: pointer;
       display: block;
       color: white;
+      background: black;
       font-size: 21px;
-      text-transform: uppercase;
-      padding: 10px 40px 10px 10px;
+      padding: 10px;
       height: 100%;
       overflow: hidden;
+      &.active {
+        color: black;
+        background: white;
+      }
     }
   
     .info-modal-close {
@@ -74,6 +81,8 @@
   .modal-wrapper {
     padding: 30px;
     position: relative;
+
+    //Доставка
 
     .hello-message {
       color: black;
@@ -228,6 +237,111 @@
         outline: 0;
       }
     }
+
+    // Конец Доставка
+
+    // Самовывоз
+
+    .addresses-wrapper {
+      height: 200px;
+
+      .modal-scrollbar {
+        max-height: 200px;
+      }
+    }
+
+    .radio-container {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+    /* Customize the label (the container) */
+    .rb-container {
+      display: block;
+      position: relative;
+      padding-left: 35px;
+      margin-bottom: 12px;
+      cursor: pointer;
+      font-size: 18px;
+      width: 50%;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    .rb-container .work-time {
+      display: block;
+      font-size: 12px;
+      color: #808080;
+    }
+
+    /* Hide the browser's default radio button */
+    .rb-container input {
+      position: absolute;
+      opacity: 0;
+    }
+
+    /* Create a custom radio button */
+    .checkmark {
+      position: absolute;
+      top: 2px;
+      left: 0;
+      height: 23px;
+      width: 23px;
+      background: transparent;
+      border-radius: 50%;
+      border: 1px solid #b2b2b2;
+    }
+
+    /* On mouse-over, add a grey background color */
+    .rb-container:hover input ~ .checkmark {
+      border: 1px solid #808080;
+    }
+
+    /* When the radio button is checked, add a blue background */
+    .rb-container input:checked ~ .checkmark {
+      background-color: #ffffff;
+      border: 1px solid #808080;
+    }
+
+    /* Create the indicator (the dot/circle - hidden when not checked) */
+    .checkmark:after {
+      content: "";
+      position: absolute;
+      display: none;
+    }
+
+    /* Show the indicator (dot/circle) when checked */
+    .rb-container input:checked ~ .checkmark:after {
+      display: block;
+    }
+
+    /* Style the indicator (dot/circle) */
+    .rb-container .checkmark:after {
+      top: 4px;
+      left: 4px;
+      width: 13px;
+      height: 13px;
+      border-radius: 50%;
+      background: #ffd70f;
+    }
+
+    .selfdelivery-btn {
+      display: block;
+      background: #ffd70f;
+      color: black;
+      text-align: center;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 6px 50px 4px;
+      margin: 16px auto 0;
+    }
+
+    // Конец Самовывоз
 
     .thank-you-message {
       background: white;
