--- a/src/components/newDelivery/style.scss
+++ b/src/components/newDelivery/style.scss
@@ -1,11 +1,4 @@
 .delivery {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 640px;
-  height: 400px;
-  background: white;
-  z-index: 9999; // Шапка модального окна
   .modal-header {
     display: flex;
     justify-content: flex-start;
@@ -66,10 +59,17 @@
       width: 100%;
       object-fit: contain;
     }
-  } // КОНЕЦ Шапка модального окна
+  } 
+  // КОНЕЦ Шапка модального окна
   .modal-wrapper {
     padding: 30px;
-    position: relative; //Доставка
+    position: relative; 
+
+    &.delivery {
+      padding: 17px 30px 16px;
+    }
+
+    //Доставка
     .hello-message {
       color: black;
       width: 100%;
@@ -77,23 +77,109 @@
       font-size: 18px;
       margin-bottom: 15px;
     }
-    .search-input {
-      text-transform: uppercase;
-      border: 1px solid #b2b2b2;
-      padding: 9px 8px 6px;
-      width: 100%;
-      height: auto;
-      margin-bottom: 15px;
-      border-radius: 6px;
-      font-size: 14px;
-      &:focus {
-        border: 1px solid #ffd70f;
-        outline: 0;
+
+    .search-wrapper {
+      position: relative;
+
+      .search-input {
+        text-transform: uppercase;
+        border: 1px solid #b2b2b2;
+        padding: 9px 8px 6px;
+        width: 100%;
+        height: auto;
+        margin-bottom: 15px;
+        border-radius: 6px;
+        font-size: 14px;
+        &:focus,
+        &:valid {
+          border: 1px solid #ffd70f;
+          outline: 0;
+
+          &~.search-btn {
+            background: url('img/icons_zoom_black.svg') center no-repeat;
+            background-size: contain;
+          }
+
+          &~.clear-btn {
+            opacity: 1;
+          }
+          &~.result {
+            display: block;
+          }
+
+        }
+        &::placeholder {
+          color: #b2b2b2;
+        }
       }
-      &::placeholder {
-        color: #b2b2b2;
+
+      .search-btn {
+        position: absolute;
+        top: 6px;
+        right: 8px;
+        width: 20px;
+        height: 20px;
+        padding: 0;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        background: url('img/icons_zoom.svg') center no-repeat;
+        background-size: contain;
+      }
+
+      .clear-btn {
+        position: absolute;
+        opacity: 0;
+        top: 12px;
+        right: 35px;
+        width: 10px;
+        height: 10px;
+        padding: 0;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        background: url('img/icons_close_min.png') center no-repeat;
+        background-size: contain;
+      }
+
+      .result {
+        position: absolute;
+        display: none;
+        top: 29px;
+        left: 0;
+        width: 100%;
+        background: white;
+        text-transform: uppercase;
+        font-size: 14px;
+        list-style-type: none;
+        border-radius: 0 0 6px 6px;
+        border: 1px solid #ffd70f;
+        border-top: none;
+        padding: 0;
+        z-index: 1;
+
+        li {
+          margin-bottom: 3px;
+          cursor: pointer;
+          padding: 2px 0 2px 8px;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+
+          &:hover {
+            background: #f7f7f7;
+          }
+        }
+
+        span {
+          font-size: 12px;
+          color: #808080;
+          text-transform: none;
+        }
       }
     }
+    
     .small-inputs-wrapper {
       display: flex;
       flex-wrap: nowrap;
