style fixes for foodItem and basket block

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -221,7 +221,7 @@
   height: 25px;
   cursor: pointer;
   font-size: 25px;
-  line-height: 22px;
+  line-height: 1;
 }
 .plus-minus-block:hover{
   background-color: #ffd60f;
