--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -122,6 +122,11 @@
       cursor: pointer;
       padding: 5px;
       margin-bottom: 3px;
+      margin-right: 5px;
+
+      &:last-child {
+        margin-right: 0; 
+      }
 
       &:hover,
       &.active {
@@ -233,7 +238,7 @@
     position: relative;
     cursor: pointer;
     width: 50%;
-    max-height: 280px;
+    height: 280px;
     margin: auto 0;
 
     img {
