--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -245,26 +245,30 @@
       width: 100%;
       max-height: 98%;
       margin: 0 auto;
-      -webkit-filter: brightness(100%);
+      filter: brightness(100%);
     }
   
-    img:hover {
-      -webkit-filter: brightness(70%);
-    }
+    // img:hover {
+    //   filter: brightness(70%);
+    // }
 
-    .arrow {
-      position: absolute;
-      top: calc(50% - 15px);
-      left: -37px;
-      width: 67px;
-      height: 30px;
-    }
 
     .detail {
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
       opacity: 0;
       position: absolute;
-      top: calc(55% - 35px);
-      left: calc(46% - 35px);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+
+      &:hover + img {
+        filter: brightness(70%);
+      }
 
       .detail-img {
         width: 36px;
@@ -278,6 +282,14 @@
         color: white;
         font-size: 14px;
         font-weight: bold;
+      }
+
+      .arrow {
+        position: absolute;
+        top: calc(50% - 15px);
+        left: -37px;
+        width: 67px;
+        height: 30px;
       }
     }
 
