--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -33,6 +33,9 @@
 
   .chars {
     width: 47%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .title {
       font-size: 21px;
