фикс отображения всплывашки с модами по правой стороне

--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -219,7 +219,7 @@
       text-transform: uppercase;
       color: black;
       background: transparent;
-      padding: 5px 13px;
+      padding: 5px 13px 2px;
       font-weight: 500;
       cursor: pointer;
       &:hover {
