--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -185,7 +185,7 @@
       text-transform: uppercase;
       color: black;
       background: transparent;
-      padding: 5px 13px;
+      padding: 5px 13px 2px;
       font-weight: 500;
       cursor: pointer;
 
@@ -250,11 +250,6 @@
       margin: 0 auto;
       filter: brightness(100%);
     }
-  
-    // img:hover {
-    //   filter: brightness(70%);
-    // }
-
 
     .detail {
       display: flex;
@@ -267,7 +262,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: 10;
+      z-index: 1;
 
       &:hover + img {
         filter: brightness(70%);
