--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -56,6 +56,7 @@
     overflow: hidden;
     .i-item {
       margin: 0 5px 0 0;
+      display: inline-block;
 
       .mod-name {
         font-size: 18px;
@@ -185,7 +186,7 @@
       text-transform: uppercase;
       color: black;
       background: transparent;
-      padding: 5px 13px 2px;
+      padding: 9px 13px 6px;
       font-weight: 500;
       cursor: pointer;
 
