Смена цвета фона у названия модалок + выравнивание бургера на главной от 1920 до 1024

--- a/src/components/newDishmod/style.scss
+++ b/src/components/newDishmod/style.scss
@@ -22,7 +22,7 @@
     justify-content: flex-start;
   
     .info-yellow-block {
-      background: #ffd70f;
+      background: #e6e6e6;
       padding: 10px;
       display: block;
       height: 100%;
