--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -48,14 +48,14 @@
 
 .burger-mo {
   position: absolute;
-  right: 36%;
+  right: 33%;
   top: 22%;
   background: url("img/burger.png") center right no-repeat;
   background-size: contain;
-  width: 20vw;
+  width: 16vw;
   height: 300px;
   .add-mo-to-cart {
-    left: 44%;
+    left: 30%;
     top: 70px;
   }
   &:hover {
@@ -291,5 +291,72 @@
     width: 300px;
     left: 106%;
     top: 190px;
+  }
+}
+
+@media screen and (min-width: 1800px) and (max-width: 1899px) {
+  
+}
+
+@media screen and (min-width: 1700px) and (max-width: 1799px) {
+}
+
+@media screen and (min-width: 1600px) and (max-width: 1699px) {
+  .burger-mo {
+    .add-mo-to-cart {
+      left: 24%;
+    }
+  }
+}
+
+@media screen and (min-width: 1500px) and (max-width: 1599px) {
+  .burger-mo {
+    .add-mo-to-cart {
+      left: 22%;
+    }
+  }
+}
+
+@media screen and (min-width: 1400px) and (max-width: 1499px) {
+  .burger-mo {
+    .add-mo-to-cart {
+      left: 20%;
+    }
+  }
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1399px) {
+  .burger-mo {
+    width: 18vw;
+    .add-mo-to-cart {
+      left: 20%;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1299px) {
+  .burger-mo {
+    width: 18vw;
+    .add-mo-to-cart {
+      left: 20%;
+    }
+  }
+}
+
+@media screen and (min-width: 1100px) and (max-width: 1199px) {
+  .burger-mo {
+    width: 20vw;
+    .add-mo-to-cart {
+      left: 20%;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1099px) {
+  .burger-mo {
+    width: 20vw;
+    .add-mo-to-cart {
+      left: 16%;
+    }
   }
 }
