--- a/src/components/newDelivery/style.scss
+++ b/src/components/newDelivery/style.scss
@@ -8,7 +8,7 @@
     height: 48px;
     border-bottom: 0;
     .info-yellow-block {
-      background: #ffd70f;
+      background: #e6e6e6;
       padding: 10px;
       display: block;
       height: 100%;
