забыл сохранить один файл

--- a/src/components/DetailInfo/style.scss
+++ b/src/components/DetailInfo/style.scss
@@ -11,10 +11,11 @@
   border-bottom: 0;
 
   .info-yellow-block {
-    background: #ffd70f;
+    background: #e6e6e6;
     padding: 10px;
     display: block;
     height: 100%;
+    color: black;
   }
 
   .info-title {
