--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -241,13 +241,17 @@
   .pic {
     position: relative;
     cursor: pointer;
+    display: flex;
     width: 50%;
-    height: 308px;
+    height: 100%;
     margin: auto 0;
 
     img {
-      width: 100%;
-      max-height: 98%;
+      max-width: 100%;
+      max-height: 100%;
+      display: flex;
+      align-self: center;
+      justify-content: center;
       margin: 0 auto;
       filter: brightness(100%);
     }
@@ -314,10 +318,6 @@
     .food {
       height: 274px;
     }
-
-    .pic {
-      height: 230px;
-    }
   }
 }
 
@@ -325,10 +325,6 @@
   .items {
     .food {
       height: 284px;
-    }
-
-    .pic {
-      height: 218px;
     }
   }
 }
