--- a/src/components/newSearch/style.scss
+++ b/src/components/newSearch/style.scss
@@ -5,7 +5,8 @@
 
   .search-input {
     text-transform: uppercase;
-    border: 1px solid #b2b2b2;
+    border: 2px solid #b2b2b2;
+    border-left: 2px solid #ffd70f;
     padding: 9px 8px 6px;
     width: 100%;
     height: 41px;
@@ -15,7 +16,7 @@
     font-size: 14px;
     &:focus,
     &:valid {
-      border: 1px solid #ffd70f;
+      border: 2px solid #ffd70f;
       outline: 0;
 
       &~.search-btn {
@@ -76,7 +77,7 @@
     font-size: 14px;
     list-style-type: none;
     border-radius: 0 0 6px 6px;
-    border: 1px solid #ffd70f;
+    border: 2px solid #ffd70f;
     border-top: none;
     padding: 0;
     z-index: 1;
