--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -161,11 +161,13 @@
     display: flex;
     flex-wrap: nowrap;
     flex-direction: flex-start;
-    margin: 10px 0 0;
+    margin: 0 0 15px;
+    width: 100%;
+    
     .btn {
       text-align: center;
       display: block;
-      border-radius: 15px;
+      border-radius: 18px;
       border: 1px solid #808080;
       color: black;
       cursor: pointer;
@@ -184,28 +186,24 @@
         box-shadow: 2px 5px 5px -4px rgba(0, 0, 0, 0.18);
       }
 
-      &.mini-size {
-        padding: 4px 8px;
-        margin-right: 8px;
-      }
-
-      &.middle-size {
-        padding: 4px 10px;
-        margin-right: 8px;
-      }
-
-      &.maxi-size {
-        padding: 4px 15px;
-      }
-
     }
   }
   .bottom {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     margin-top: 15px;
+
+    .bottom-row {
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
+
     .price {
       font-size: 2rem;
       color: black;
