--- a/src/components/newDelivery/style.scss
+++ b/src/components/newDelivery/style.scss
@@ -74,10 +74,9 @@
       color: black;
       width: 100%;
       text-align: center;
-      font-size: 18px;
+      font-size: 17px;
       margin-bottom: 15px;
     }
-
     .search-wrapper {
       position: relative;
 
@@ -90,14 +89,20 @@
         margin-bottom: 15px;
         border-radius: 6px;
         font-size: 14px;
-        &:focus,
+        &:focus{
+          font-weight: normal;
+          border: 1px solid #ffd70f;
+          outline: 0;
+        }
         &:valid {
           border: 1px solid #ffd70f;
           outline: 0;
+          font-weight: bold;
 
           &~.search-btn {
             background: url('img/icons_zoom_black.svg') center no-repeat;
             background-size: contain;
+            padding-top: 10px;
           }
 
           &~.clear-btn {
@@ -195,7 +200,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        font-size: 14px;
+        font-size: 13px;
         text-align: center;
         transition: all 0.05s linear 0s;
         color: #b2b2b2;
@@ -203,69 +208,169 @@
         pointer-events: none;
       }
     }
+    .icons_incorrect{
+      position: absolute;
+      right: 10px;
+      top: 7px;
+    }
+    .phone-wrapper{
+      width: 48%;
+    }
     .small-input {
       position: relative;
       text-transform: uppercase;
       border: 1px solid #b2b2b2;
-      padding: 9px 8px 6px;
+      padding: 6px 8px 3px;
       border-radius: 6px;
-      font-size: 14px;
-      text-align: center;
+      font-size: 20px;
       width: 100%;
-      &:focus,
+      &:focus{
+        font-weight: normal;
+        border: 1px solid #ffd70f;
+        outline: 0;
+      }
       &:valid {
         outline: 0;
         border: 1px solid #ffd70f;
+        text-align: center;
         &~label {
           width: auto;
           height: auto;
           top: 0;
           left: 5px;
           font-size: 12px;
+          }
         }
       }
-    }
+      .error-mess{
+        color: #EE232B;
+        font-size: 17px;
+        margin-right: 19px;
+      }
+      .small-input2 {
+        position: relative;
+        text-transform: uppercase;
+        border: 1px solid #b2b2b2;
+        padding: 9px 8px 6px;
+        border-radius: 6px;
+        font-size: 12px;
+        width: 100%;
+        &:focus{
+          font-weight: normal;
+          border: 1px solid #ffd70f;
+          outline: 0;
+        }
+        &:valid {
+          outline: 0;
+          border: 1px solid #ffd70f;
+          font-weight: bold;
+          &~label {
+            width: auto;
+            height: auto;
+            top: 0;
+            left: 5px;
+            font-size: 12px;
+            }
+          }
+        }
+        .small-input2-error{
+          position: relative;
+          text-transform: uppercase;
+          padding: 9px 8px 6px;
+          border-radius: 6px;
+          font-size: 12px;
+          width: 100%;
+          font-weight: normal;
+          border: 1px solid #EE232B;
+          outline: 0;
+          &:valid {
+            font-weight: bold;
+          }
+        }
     .recieve-code-wrapper {
       display: flex;
       flex-wrap: nowrap;
-      justify-content: center;
+      justify-content: space-between;
       margin-bottom: 15px;
     }
-    .phone-wrapper {
-      width: 50%;
-    }
-    .phone-input {
-      text-transform: uppercase;
-      border: 1px solid #b2b2b2;
-      padding: 9px 8px 6px;
-      border-radius: 6px 0 0 6px;
-      text-align: center;
-      font-size: 14px;
-      width: 100%;
-      &:focus {
-        outline: 0;
-        border: 1px solid #ffd70f;
+    input[type="checkbox"].ios8-switch {
+      position: absolute;
+      margin: 8px 0 0 16px;    
       }
-    }
-    .phone-btn {
+      input[type="checkbox"].ios8-switch + label {
+          position: relative;
+          padding: 5px 0 0 50px;
+          line-height: 2.0em;
+          cursor: pointer;
+      }
+      input[type="checkbox"].ios8-switch + label:before {
+          content: "";
+          position: absolute;
+          display: block;
+          left: -7px;
+          top: -4px;
+          width: 65px; /* x*5 */
+          height: 40px; /* x*3 */
+          border-radius: 30px; /* x*2 */
+          background: #fff;
+          border: 2px solid #ffd70f;
+          -webkit-transition: all 0.3s;
+          transition: all 0.3s;
+      }
+      input[type="checkbox"].ios8-switch + label:after {
+          content: "";
+          position: absolute;
+          display: block;
+          left: -1px;
+          top: 1px;
+          width: 30px; /* x*3 */
+          height: 30px; /* x*3 */
+          border-radius: 100%; /* x*2 */
+          background: #fff;
+          border: 1px solid #AFAFAF;
+          -webkit-transition: all 0.3s;
+          transition: all 0.3s;
+      }
+      input[type="checkbox"].ios8-switch + label:hover:after {
+          box-shadow: 0 0 5px rgba(0,0,0,0.3);
+      }
+      input[type="checkbox"].ios8-switch:checked + label:after {
+          margin-left: 25px;
+      }
+      input[type="checkbox"].ios8-switch:checked + label:before {
+          background: #ffd70f;
+      }
+    .auth-button{
+      background-color: #ffd70f;
+      padding: 8px 0px 8px 0px;
+      border-radius: 5px;
       text-transform: uppercase;
-      border: 1px solid #b2b2b2;
-      background: #b2b2b2;
-      color: white;
-      padding: 9px 8px 6px;
-      border-radius: 0 6px 6px 0;
       text-align: center;
-      font-size: 14px;
+      width: 41%;
       cursor: pointer;
-      width: 50%;
-      &:hover {
-        border: 1px solid #ffd70f;
-        background: #ffd70f;
-        color: black;
-      }
-      &:focus {
-        outline: 0;
-      }
+    }
+    .auth-button:hover{
+      color: #007bff;
+    }
+    .reg-button{
+      background-color: #C0C0C0;
+      padding: 8px 0px 8px 0px;
+      border-radius: 5px;
+      text-transform: uppercase;
+      width: 41%;
+      text-align: center;
+      color: white;
+      cursor: pointer;
+    }
+    .reg-button:hover{
+      color: #007bff;
+    }
+    .send-button{
+      background-color: #ffd70f;
+      padding: 10px 30px 10px 30px;
+      border-radius: 5px;
+      text-transform: uppercase;
+      font-weight: bold;
     }
     .send-code-wrapper {
       display: flex;
@@ -283,9 +388,9 @@
     }
     .send-again-link {
       color: #808080;
-      font-size: 18px;
-      margin: 0 auto;
+      font-size: 17px;
       text-decoration: underline;
+      cursor: pointer;
       &:hover {
         color: black;
       }
