--- a/src/components/DetailInfo/style.scss
+++ b/src/components/DetailInfo/style.scss
@@ -54,9 +54,12 @@
   width: 100%;
   max-height: 400px;
   img {
-    width: 100%;
-    object-fit: contain;
-
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    margin: 0 auto;
   }
 }
 
