--- a/src/components/mainOffer/style.scss
+++ b/src/components/mainOffer/style.scss
@@ -171,7 +171,7 @@
       border: 1px solid #808080;
       color: black;
       cursor: pointer;
-      padding: 5px;
+      padding: 5px 14px;
       margin-bottom: 3px;
       margin-right: 5px;
 
