next. dont merge

--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -94,7 +94,7 @@
 
         .name {
           color: #b2b2b2;
-          width: calc(100% - 175px);
+          width: calc(100% - 195px);
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -132,6 +132,8 @@
             margin: 2px 0.5rem 0;
             font-size: 1.1rem;
             line-height: 1;
+            width: 25px;
+            text-align: center;
           }
         }
 
@@ -343,6 +345,12 @@
       font-weight: bold;
       max-height: 62px;
       overflow: hidden;
+
+      span {
+        color: #b2b2b2;
+        text-align: right;
+      }
+
     }
 
     .pic {
@@ -438,7 +446,7 @@
       }
 
       .label-counter {
-        display: inline-block;
+        display: block;
         margin: 2px 0.5rem 0;
         font-size: 1.8rem;
         line-height: 1;
@@ -491,6 +499,83 @@
       text-align: right;
     }
 
+  }
+
+  .select-wrapper {
+    position: relative;
+
+    .select {
+      text-transform: uppercase;
+      border: 1px solid #b2b2b2;
+      padding: 9px 8px 6px;
+      width: 100%;
+      height: auto;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      font-size: 14px;
+      &:focus,
+      &:valid {
+        border: 1px solid #ffd70f;
+        outline: 0;
+
+        &~.arrow {
+          transform: rotate(180deg);
+        }
+
+        &~.result {
+          display: block;
+        }
+
+      }
+      &::placeholder {
+        color: #b2b2b2;
+      }
+    }
+
+    .arrow {
+      position: absolute;
+      top: 10px;
+      right: 8px;
+      width: 14px;
+      height: 14px;
+      padding: 0;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      background: url('img/icons_dropdn_arrow.svg') center no-repeat;
+      background-size: contain;
+    }
+
+    .options {
+      position: absolute;
+      top: 29px;
+      left: 0;
+      width: 100%;
+      background: white;
+      text-transform: uppercase;
+      font-size: 14px;
+      list-style-type: none;
+      border-radius: 0 0 6px 6px;
+      border: 1px solid #ffd70f;
+      border-top: none;
+      padding: 0;
+      z-index: 9999;
+
+      li {
+        margin-bottom: 3px;
+        cursor: pointer;
+        padding: 2px 0 2px 8px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        &:hover {
+          background: #f7f7f7;
+        }
+      }
+
+    }
   }
 }
 
