--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -303,6 +303,8 @@
         margin: 2px 0.5rem 0;
         font-size: 1.8rem;
         line-height: 1;
+        width: 35px;
+        text-align: center;
       }
     }
   }
@@ -324,6 +326,7 @@
     border: 2px dotted transparent;
     width: 19%;
     margin-right: 1%;
+    overflow: hidden;
 
     &:nth-child(5n) {
       margin-right: 0;
