--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -156,6 +156,60 @@
     }
   }
 
+  .chars.chars-dop-item {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 100%;
+    height: 26px;
+
+    .title {
+      width: 560px;
+    }
+
+    .counter-block {
+      display: flex;
+      width: 103px;
+
+      .counter {
+        width: 26px;
+        height: 26px;
+        background: transparent;
+        border-radius: 50%;
+        border: 1px solid #808080;
+        outline: none;
+        text-decoration: none;
+        box-shadow: none;
+        cursor: pointer;
+
+        &:hover {
+          background: #ffd70f;
+          border: 1px solid #ffd70f;
+        }
+      }
+
+      .label-counter {
+        display: inline-block;
+        margin: 2px 0.5rem 0;
+        font-size: 1.8rem;
+        line-height: 1;
+        width: 35px;
+        text-align: center;
+      }
+    }
+
+    .price {
+      font-size: 1.8rem;
+      color: black;
+      margin: 0 50px 0 0;
+      white-space: nowrap;
+      width: 150px;
+      text-align: right;
+    }
+
+  }
+
   .pic {
     position: relative;
     cursor: pointer;
@@ -269,7 +323,8 @@
       white-space: nowrap;
 
       span {
-        font-size: 1.8rem;      }
+        font-size: 1.8rem;
+      }
     }
 
     .weight {
