fix margin labelcounter

--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -129,7 +129,7 @@
     
           .label-counter {
             display: inline-block;
-            margin: 2px 0.5rem 0;
+            margin: 0 0.5rem 0;
             font-size: 1.1rem;
             line-height: 1;
             width: 25px;
@@ -192,7 +192,7 @@
 
       .label-counter {
         display: inline-block;
-        margin: 2px 0.5rem 0;
+        margin: 0 0.5rem 0;
         font-size: 1.8rem;
         line-height: 1;
         width: 35px;
@@ -358,7 +358,7 @@
 
       .label-counter {
         display: inline-block;
-        margin: 2px 0.5rem 0;
+        margin: 0 0.5rem 0;
         font-size: 1.8rem;
         line-height: 1;
         width: 35px;
