--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -598,6 +598,7 @@
       margin-bottom: 15px;
       border-radius: 6px;
       font-size: 14px;
+      cursor: pointer;
       &:focus,
       &:valid {
         border: 1px solid #ffd70f;
@@ -619,7 +620,7 @@
 
     .arrow {
       position: absolute;
-      top: 10px;
+      top: 12px;
       right: 8px;
       width: 14px;
       height: 14px;
@@ -633,7 +634,7 @@
 
     .options {
       position: absolute;
-      top: 29px;
+      top: 33px;
       left: 0;
       width: 100%;
       background: white;
