--- a/src/components/newFood/style.scss
+++ b/src/components/newFood/style.scss
@@ -30,10 +30,10 @@
         }
 
         .arrow {
-          bottom: 10%;
+          bottom: 4%;
           left: auto;
           right: -14px;
-          transform: scaleX(-1);
+          transform: scale(-1, -1);
         }
       }
     }
