--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -46,11 +46,6 @@
   font-size: 20px;
   display: flex;
   justify-content: space-between;
-  border: 2px dotted transparent;
-
-  // &:hover {
-  //   border: 2px dotted #b2b2b2;
-  // }
 
   .close {
     width: 21px;
@@ -405,21 +400,23 @@
   margin-bottom: 50px;
 
   .drink {
-    border: 2px dotted transparent;
     width: 19%;
     margin-right: 1%;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
 
     &:nth-child(5n) {
       margin-right: 0;
     }
 
-    &:hover {
-      border: 2px dotted #b2b2b2;
-    }
 
     .chars {
-      padding: 10px;
+      padding: 20px 6px 10px;
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .title {
@@ -427,15 +424,11 @@
       font-family: "Gilroy";
       text-transform: uppercase;
       color: black;
+      line-height: 1.2;
       font-weight: bold;
       max-height: 62px;
       overflow: hidden;
-
-      span {
-        color: #b2b2b2;
-        text-align: right;
-      }
-
+      margin: 0 0 20px;
     }
 
     .pic {
@@ -494,19 +487,39 @@
     .bottom-row {
       display: flex;
       flex-wrap: nowrap;
+      flex-direction: column;
       justify-content: space-between;
       align-items: center;
       width: 100%;
     }
 
-    .price {
+    .cart-price-wrap {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .price-wrapper {
+      display: flex;
+      flex-direction: column;
       font-size: 2rem;
       color: black;
       margin: 0 0 0 0;
       white-space: nowrap;
+      justify-content: center;
 
-      span {
+      span.price {
         font-size: 1.8rem;
+        line-height: 1;
+        margin-top: 3px;
+      }
+
+      span.weight {
+        font-size: 1.1rem;
+        color: #b2b2b2;
+        line-height: 1;
       }
     }
 
@@ -603,10 +616,6 @@
       &:valid {
         border: 1px solid #ffd70f;
         outline: 0;
-
-        &~.arrow {
-          transform: rotate(180deg);
-        }
 
         &~.result {
           display: block;
