--- a/src/components/newDishmod/style.scss
+++ b/src/components/newDishmod/style.scss
@@ -5,6 +5,7 @@
   width: 440px;
   height: 390px;
   background: white;
+  font-size: 14px;
   z-index: 2;
 
   &.right-side {
@@ -92,7 +93,7 @@
     
     li {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-between !important;
       flex-wrap: nowrap;
     }
 
