--- a/src/components/address-component/style.scss
+++ b/src/components/address-component/style.scss
@@ -1,4 +1,4 @@
-.search-wrapper,
+.delivery-search-wrapper,
 .need-for-odds-wrapper {
   position: relative;
 
@@ -29,6 +29,9 @@
       font-weight: normal;
       border: 1px solid #ffd70f;
       outline: 0;
+      &~.result {
+        display: block;
+      }
     }
     &:valid {
       outline: 0;
@@ -49,6 +52,47 @@
     }
   }
 
+  .result {
+    position: absolute;
+    display: none;
+    top: 34px;
+    left: 0;
+    width: 100%;
+    background: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    list-style-type: none;
+    border-radius: 0 0 6px 6px;
+    border: 1px solid #ffd70f;
+    border-top: none;
+    padding: 0;
+    z-index: 1;
+
+    &:hover {
+      display: block;
+    }
+
+    li {
+      margin-bottom: 3px;
+      cursor: pointer;
+      padding: 2px 0 2px 8px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      &:hover {
+        background: #f7f7f7;
+      }
+    }
+
+    span {
+      font-size: 12px;
+      color: #808080;
+      text-transform: none;
+    }
+  }
+
 }
 
 .need-for-odds-wrapper {
@@ -60,6 +104,46 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   margin-bottom: 15px;
+
+  .result {
+    position: absolute;
+    display: none;
+    top: 34px;
+    left: 0;
+    width: 100%;
+    background: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    list-style-type: none;
+    border-radius: 0 0 6px 6px;
+    border: 1px solid #ffd70f;
+    border-top: none;
+    padding: 0;
+    z-index: 1;
+    &:hover {
+      display: block;
+    }
+
+    li {
+      margin-bottom: 3px;
+      cursor: pointer;
+      padding: 2px 0 2px 8px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      &:hover {
+        background: #f7f7f7;
+      }
+    }
+
+    span {
+      font-size: 12px;
+      color: #808080;
+      text-transform: none;
+    }
+  }
 }
 .small-wrapper {
   position: relative;
@@ -98,6 +182,9 @@
     font-weight: normal;
     border: 1px solid #ffd70f;
     outline: 0;
+    &~.result {
+      display: block;
+    }
   }
   &:valid {
     outline: 0;
