--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -565,6 +565,7 @@
       background: transparent;
       padding: 9px 13px 6px;
       font-weight: 500;
+      max-height: 43px;
       cursor: pointer;
 
       &:hover {
@@ -646,7 +647,6 @@
       left: 0;
       width: 100%;
       background: white;
-      text-transform: uppercase;
       font-size: 14px;
       list-style-type: none;
       border-radius: 0 0 6px 6px;
@@ -746,16 +746,17 @@
     .finish-order {
       position: relative;
       outline: 0;
-      border: 2px solid #ffd70f;
+      border: 2px solid black;
       border-radius: 4px;
       text-align: center;
       max-height: 41px;
       align-self: flex-end;
       text-transform: uppercase;
       color: black;
-      background: #ffd70f;
-      padding: 9px 25px 6px;
+      background: transparent;
+      padding: 12px 25px 27px;
       line-height: 1;
+      font-weight: bold;
       cursor: pointer;
     }
   }
