--- a/src/components/Dish/_styles.scss
+++ b/src/components/Dish/_styles.scss
@@ -62,6 +62,19 @@
         }
       }
     }
+
+    .i-add {
+      display: inline;
+      align-self: flex-start;
+      cursor: pointer;
+      text-decoration: none;
+      border-bottom: 2px dotted #808080;
+      font-size: 1.1rem;
+  
+      &:hover {
+        border-bottom: 2px solid #808080;
+      }
+    }
   
     &__variants {
       display: flex;
